fixing double scroll again

--- a/frontend/public/components/_notification-drawer.scss
+++ b/frontend/public/components/_notification-drawer.scss
@@ -1,5 +1,4 @@
 .co-notification-drawer {
-  height: fit-content;
+  overflow-y: hidden !important;
   z-index: 10;
-  height: fit-content;
 }
